# brain-agriculture-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
database/: connection.py
database/scripts/: init.sql
migrations/: env.py
migrations/versions/: 001_create_initial_tables.py  002_create_users_table.py
repositories/: dashboard.py  producer.py  user.py
routers/: auth.py  dashboard.py  health.py  producer.py
schemas/: auth.py  health.py  pagination.py  producer.py
services/: auth.py  dashboard.py  producer.py
tests/: test_producers.py
utils/: security.py
